added ability to add items

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
+            // "experimentalDecorators": true
         },
         "sourceType": "module"
     },
